# scATAcat

./: .gitignore  .readthedocs.yaml  LICENCE  LICENSE  README.md  pyproject.toml
docs/: citation.rst  conf.py  contact.rst  index.rst  requirements.txt  scATAcat.rst
docs/_build/doctrees/: citation.doctree  contact.doctree  environment.pickle  index.doctree  modules.doctree  scATAcat.doctree
docs/_build/doctrees/installation/: installation.doctree
docs/_build/doctrees/tutorial/: tutorial.doctree
docs/_build/html/: .buildinfo  citation.html  contact.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scATAcat.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/scATAcat/: bulk_data_functions.html  helper_functions.html  plot_functions.html  pseudobulk_functions.html
docs/_build/html/_sources/: citation.rst.txt  index.rst.txt  modules.rst.txt  scATAcat.rst.txt
docs/_build/html/_sources/installation/: installation.rst.txt
docs/_build/html/installation/: installation.html
docs/_build/html/tutorial/: tutorial.html
docs/source/: conf.py
docs/tutorial/: tutorial.rst
src/scATAcat/: __init__.py  bulk_data_functions.py  helper_functions.py  plot_functions.py  pseudobulk_functions.py
test/: test_bulk_data_functions.py  test_helper_functions.py  test_pseudobulk_functions.py
