[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scATAcat"
description = "Single-cell ATAC-seq Cluster Annotation Tool"
version="0.0.1"
requires-python = ">=3.10"
license = "BSD-3-clause"
authors = [
    {name = "Aybuge Altay"}
]
maintainers = [
    {name = "Aybuge Altay", email = "aybugealtay@gmail.com"},
]
readme = "README.md"

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy >=1.24.4",
    "matplotlib >=3.7.1",
    "seaborn >=0.12.2",
    "scanpy==1.9.4",
    "pandas >=1.1.1, !=2.1.2",
    "scipy>=1.11.2",
    "seaborn>=0.13.0",
    "h5py>=3.7.0",
    "tqdm",
    "scikit-learn>=0.24",
    "anndata >=0.9.2",
    "mycolorpy >=1.5.1"
]

[tool.hatch.build.targets.wheel]
